[package]
name = "karlsen-miner"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Karlsen developers"]
repository = "https://github.com/karlsen-project/karlsen-miner"
readme = "README.md"
description = "A Karlsen high performance CPU miner"
categories = ["command-line-utilities"]
keywords = ["blockchain", "cli"]
include = [
    "src/**",
    "proto/**",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[dependencies]
tonic = "0.13.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
prost = "0.13.5"
tokio-stream = "0.1"
num_cpus = "1"
rand = "0.9.0"
blake2b_simd = "1.0.0"
clap = { version = "4.5.36", features = ["derive", "color"] }
log = "0.4.26"
env_logger = "0.11.7"
arc-swap = "1.6.0"
parking = { package = "parking_lot", version = "0.12", optional = true }
shuttle = { version = "0.8.0", optional = true }
chrono = "0.4"
lazy_static = "1.4.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
blake3 = "1.3.1"

[features]
parking_lot = ["parking", "tokio/parking_lot"]
bench = []

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tonic-build = { version = "0.13.0", default-features = false, features = ["prost", "transport"] }
cc = "1.2.19"

[dev-dependencies]
sha3 = "0.10"

[lints.clippy]
uninlined_format_args = "allow"